# ButaButi

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  Security policy.md  TODOS.md  clippy.toml  rustfmt.toml  validate.ps1
.analysis/: FILE_ORGANIZATION_REVIEW.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
benches/: README.md  format_io.rs  pattern_operations.rs  thread_operations.rs
documentation/: embroidery-rust-analysis.md
examples/: basic_pattern.rs  batch_conversion.rs  json_and_processing.rs  multi_format_export.rs  palette_management.rs
proptest-regressions/: README.md
proptest-regressions/core/: pattern.txt
src/: lib.rs  wasm.rs
src/core/: collection.rs  color_group.rs  constants.rs  encoder.rs  matrix.rs  mod.rs  pattern.rs  thread.rs
src/formats/: mod.rs  registry.rs
src/formats/io/: detector.rs  macros.rs  mod.rs  readers.rs  utils.rs  writers.rs
src/formats/io/readers/: bro.rs  col.rs  csv.rs  dat.rs  dsb.rs  dst.rs  dsz.rs  edr.rs  emd.rs  exp.rs  exy.rs  fxy.rs  gcode.rs  gt.rs  hus.rs  inb.rs  inf.rs  jef.rs  jpx.rs  json.rs  ksm.rs  max.rs  mit.rs  new.rs  pcd.rs  pcm.rs  pcq.rs  pcs.rs  pec.rs  pes.rs  phb.rs  phc.rs  pmv.rs  sew.rs  shv.rs  spx.rs  stc.rs  stx.rs  tap.rs  tbf.rs  (+9 more)
src/formats/io/writers/: col.rs  csv.rs  dst.rs  edr.rs  exp.rs  gcode.rs  inf.rs  jef.rs  json.rs  pec.rs  pes.rs  png.rs  svg.rs  tbf.rs  txt.rs  u01.rs  vp3.rs  xxx.rs
src/palettes/: mod.rs  thread_hus.rs  thread_jef.rs  thread_pec.rs  thread_sew.rs  thread_shv.rs
src/utils/: batch.rs  compress.rs  error.rs  functions.rs  mod.rs  palette.rs  processing.rs  stitch_renderer.rs  string.rs
tests/: batch_integration_test.rs  comprehensive_batch_test.rs  fuzz_formats.rs
wasm/: README.md  app.js  build.ps1  build.sh  index.html  styles.css
