[package]
name = "butabuti"
version = "0.1.0"
edition = "2021"
authors = ["ButaButi Contributors"]
description = "High-performance Rust library for reading, writing, and manipulating embroidery files"
license = "MIT"
repository = "https://github.com/Fahad090NP/ButaButi"
keywords = [
    "machine embroidery",
    "embroidery formats",
    "embroidery parser",
    "embroidery writer",
]
categories = ["parser-implementations", "encoding"]
readme = "README.md"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Binary data handling
byteorder = "1.5"

# Static data
lazy_static = "1.4"

# Date/time for JEF format
chrono = "0.4"

# Optional: Image processing for PNG export
image = { version = "0.25", optional = true }

# Optional: Parallel processing
rayon = { version = "1.8", optional = true }

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing utilities
approx = "0.5"

[features]
default = []
graphics = ["image"]
parallel = ["rayon"]
full = ["graphics", "parallel"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3

[[bin]]
name = "batch_test"
path = "testing/test.rs"
